--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -22,5 +22,22 @@
     // install phpcs using composer then run `sudo ln -s ~/.composer/vendor/bin/phpcs /usr/local/bin/phpcs`
     "phpcs.standard": "PSR2",
     "phpcs.enable": true,
-    "phpcs.autoConfigSearch": true
+    "phpcs.autoConfigSearch": true,
+
+    // phpcs fixer
+    "php-cs-fixer.executablePath": "${extensionPath}/php-cs-fixer.phar",
+    "php-cs-fixer.onsave": false,
+    "php-cs-fixer.rules": "@PSR2",
+    "php-cs-fixer.config": ".php_cs;.php_cs.dist",
+    "php-cs-fixer.allowRisky": false,
+    "php-cs-fixer.pathMode": "override",
+    "php-cs-fixer.exclude": [],
+    "php-cs-fixer.autoFixByBracket": true,
+    "php-cs-fixer.autoFixBySemicolon": false,
+    "php-cs-fixer.formatHtml": false,
+    "php-cs-fixer.documentFormattingProvider": true,
+    "[php]": {
+        "editor.defaultFormatter": "junstyle.php-cs-fixer"
+    },
+    "editor.formatOnSave": true
 }
